<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wahoo Ware</string>
    <string name="facebook_app_id">1510588855892720</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tug_of_war">TugOfWar</string>
    <string name="title_activity_clear_cut_challenge">ClearCutChallenge</string>
    <string name="title_activity_color_sequence">Color Sequence</string>
    <string name="tug_of_war">Tug of War</string>
    <string name="clear_cut_challenge">Clear Cut Challenge</string>
    <string name="color_sequence">Color Sequence</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="preferences"> Preferences </string>
    <string name="set_ip_address">Set IP Address</string>
    <string name="http">http://</string>
    <string name="rpi">/rpi</string>
    <string name="score">Score: 0</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>


</resources>
